Position refresh ROIs button fixed so that it is always visible (closes #284)

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -30,6 +30,13 @@
 	line-height: 30px;
 }
 
+#refresh-rois-btn
+{
+	position: fixed;
+	top: 2%;
+	right: 2%;
+}
+
 .signature-div
 {
     width: 80%;
